--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+aescryptVersion = "0.0.1"
 agp = "8.4.0"
 comGoogleDaggerHiltAndroid = "2.48"
 fragmentKtx = "1.7.1"
@@ -39,6 +40,7 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
+scottyab-aescrypt = { module = "com.scottyab:aescrypt", version.ref = "aescryptVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
